# SlopAudio-Connect

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
Source/: Main.cpp
Source/App/: AppState.cpp  AppState.h  ProfileManager.cpp  ProfileManager.h  SessionController.cpp  SessionController.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  PitchDetector.cpp  PitchDetector.h  PluginChainProcessor.cpp  PluginChainProcessor.h
Source/GUI/: AudioSettingsPanel.cpp  AudioSettingsPanel.h  ConnectionPanel.cpp  ConnectionPanel.h  DetectionPanel.cpp  DetectionPanel.h  LogConsoleWindow.cpp  LogConsoleWindow.h  LucideIcons.cpp  LucideIcons.h  MainWindow.cpp  MainWindow.h  PluginChainPanel.cpp  PluginChainPanel.h  ProfilePanel.cpp  ProfilePanel.h  SidebarNav.cpp  SidebarNav.h  SlopButton.h  SlopInput.h  SlopLookAndFeel.cpp  SlopLookAndFeel.h  StatusBar.cpp  StatusBar.h
Source/Network/: BeaconScanner.cpp  BeaconScanner.h  MessageTypes.h  UdpSession.cpp  UdpSession.h
tools/: generate_juce_icons.py
